# smarts-project.rl

./: .gitignore  README.md
control_and_supervised_learning/: MANIFEST.in  README.md  setup.cfg
control_and_supervised_learning/control_and_supervised_learning/: eval.py  policy.py
discrete_soft_actor_critic/: README.md  setup.cfg
discrete_soft_actor_critic/discrete_soft_actor_critic/: classifier_model.pt  format_obs.py  network.py  policy.py  wrappers.py
interaction_aware_motion_prediction/: README.md  policy.py  setup.cfg
interaction_aware_motion_prediction/interaction_aware_motion_prediction/: README.md  observation.py  planner.py  policy.py
intersection-v0/: events.out.tfevents.1651601587.gx3.16.0
marl_benchmark/: .gitignore  README.md  requirements.txt
marl_benchmark/marl_benchmark/: __init__.py  common.py  rule_based_run.py
marl_benchmark/marl_benchmark/agents/: __init__.py
marl_benchmark/marl_benchmark/agents/maddpg/: tf_policy.py
marl_benchmark/marl_benchmark/metrics/: basic_handler.py
marl_benchmark/marl_benchmark/networks/: centralized_ac.py  communicate.py
marl_benchmark/marl_benchmark/wrappers/rllib/: frame_stack.py
neurips2022/evaluation/: evaluate.py  visualize.py
neurips2022/track2/: Dockerfile
neurips2022/track2/submission/: model_IL.py  policy.py  scaler_IL.pkl
neurips2022/track2/train/: README.md  evaluate.py  requirements.txt  setup.py  train.py  utility_IL.py  visualize.py
