[metadata]
name = smarts_model_iamp
version = 0.1.1
url = https://github.com/huawei-noah/SMARTS
description = SMARTS zoo agent.
long_description = Interaction-aware Motion Prediction trained agent. See [SMARTS](https://github.com/huawei-noah/SMARTS).
long_description_content_type=text/markdown
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = == 3.8.*
install_requires = 
    numpy==1.23.1
    torch==1.12.0
    torchfile==0.1.0